Fix CSS positioning of event boxes in web dashboard - prevent third box from overlapping with second box

--- a/ptak-expo-web/src/pages/DashboardPage.module.css
+++ b/ptak-expo-web/src/pages/DashboardPage.module.css
@@ -175,7 +175,7 @@
   height: 170px;
 }
 .groupParent {
-  right: 145px;
+  left: 876px;
 }
 .groupDiv {
   left: 511px;
